<resources>
    <string name="app_name">Check In-out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_check_in">เข้างาน</string>
    <string name="button_check_out">ออกงาน</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AIP HR</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_attendance">เข้า-ออกงาน</string>
    <string name="menu_attendance_history">ประวัติเข้า-ออกงาน</string>
    <string name="menu_request_attendance">เขียนคำร้อง</string>
    <string name="menu_request_attendance_history">ประวัติเขียนคำร้อง</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="btn_save">บันทึก</string>
    <string name="title_req_attendance">เขียนคำร้อง</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tr_date">\nวันที่</string>
    <string name="tr_time_in">เวลา\nเข้างาน</string>
    <string name="time_in">เวลาเข้างาน</string>
    <string name="tr_time_out">เวลา\nออกงาน</string>
    <string name="time_out">เวลาออกงาน</string>
    <string name="tr_late">\nสาย</string>
    <string name="tr_even">\nเหตุการณ์</string>
    <string name="tr_reason">\nเหตุผล</string>
    <string name="reason">เหตุผล</string>
    <string name="tr_status">\nสถานะ</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>