<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_attendance"
            android:icon="@drawable/nav_attendance"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/menu_attendance_history"
            android:icon="@drawable/nav_attendance_history"
            android:title="@string/menu_attendance_history" />
        <item
            android:id="@+id/menu_request_attendance"
            android:icon="@drawable/nav_request"
            android:title="@string/menu_request_attendance" />
        <item
            android:id="@+id/menu_request_attendance_history"
            android:icon="@drawable/nav_attendance_history"
            android:title="@string/menu_request_attendance_history" />
    </group>
</menu>