<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendance.AttendanceHistoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16dp"
            android:text="ประวัติการเข้า-ออกงาน"/>
    <TableLayout
        android:id="@+id/table_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="90dp"
                android:gravity="center"
                android:text="@string/tr_date"
                android:background="@drawable/border"
                android:padding="5dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:text="@string/tr_time_in"
                android:gravity="center"
                android:background="@drawable/border"
                android:padding="5dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:text="@string/tr_time_out"
                android:gravity="center"
                android:background="@drawable/border"
                android:padding="5dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="60dp"
                android:gravity="center"
                android:text="@string/tr_late"
                android:background="@drawable/border"
                android:padding="5dp"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="80dp"
                android:gravity="center"
                android:text="@string/tr_even"
                android:background="@drawable/border"
                android:padding="5dp"/>
        </TableRow>
    </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>