<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reqattendance.ReqAttendanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginBottom="14dp"
            android:text="@string/title_req_attendance"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tr_date"/>

            <Button
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="14dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:text="01/01/2024"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_in"/>

            <Button
                android:id="@+id/et_time_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="14dp"
                android:textColor="@color/gray"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:text="00:00" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_out"/>

            <Button
                android:id="@+id/et_time_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/white"
                android:layout_marginBottom="14dp"
                android:textColor="@color/gray"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:text="00:00" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reason"/>

            <EditText
                android:id="@+id/reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="14dp"
                android:text="" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="16dp"
            android:text="@string/btn_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>