<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reqattendance.ReqAttendanceHistoryFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16dp"
            android:text="ประวัติการเขียนคำร้อง"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_margin="10dp"
            android:text="เลือกเดือนที่ต้องการดู"/>
            <Button
                android:id="@+id/btn_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableRight="@drawable/baseline_calendar_month_24"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                android:text=""/>
           <!-- <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>-->
        </LinearLayout>
        <TableLayout
            android:id="@+id/table_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="80dp"
                    android:gravity="center"
                    android:text="@string/tr_date"
                    android:background="@drawable/border"
                    android:padding="5dp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="55dp"
                    android:text="@string/tr_time_in"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:padding="5dp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="60dp"
                    android:text="@string/tr_time_out"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:padding="5dp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="60dp"
                    android:gravity="center"
                    android:text="@string/tr_reason"
                    android:background="@drawable/border"
                    android:padding="5dp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="100dp"
                    android:gravity="center"
                    android:text="@string/tr_status"
                    android:background="@drawable/border"
                    android:padding="5dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>